tests/ui/unresolved/unresolved-extern-mod-suggestion.rs
extern crate core;
use core;
//~^ ERROR the name `core` is defined multiple times

fn main() {}

// ferrocene-annotations: fls_9gprp17h6t1q
// Use Imports
//
// ferrocene-annotations: fls_gklst7joeo33
// External Crates
